about us/slider

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -175,20 +175,65 @@
           </div>
         </div>
 
+        <div class="ZTD_wrapper">
+          <div class="ZTD_content">
+            <img src="./assets/img/AboutUs/ZTD-icon.svg" alt="" />
+            <h1 class="title">Дистрибьютер торговой марки ZTD в России</h1>
+            <h6>
+              Наша компания является официальным представителем бренда ZTD на
+              территории России.
+            </h6>
+            <p>
+              Компания «Запасные части и технологические детали» — это крупный
+              производитель запчастей и комплектующих для грузовых автомобилей
+              КАМАЗ, МАЗ, ЗИЛ и УРАЛ, представленный на российском рынке под
+              торговой маркой ZTD. Ассортимент товарных позиций составляют
+              масляные, воздушные и топливные фильтры, натяжные ремни,
+              амортизаторы, элементы тормозных систем, систем сцепления
+              автомобилей и многое другое. Продукция ZTD изготавливается в Китае
+              на сертифицированном оборудовании, под управлением профессионалов.
+              Специалисты компании следят за качеством используемого сырья и
+              строгим соблюдением технологичности процесса изготовления
+              продукции. Каждая партия проходит контроль качества на
+              соответствие техническим допускам.
+            </p>
+          </div>
+        </div>
+
         <div class="certs">
           <h1 class="title">Сертификаты</h1>
           <div class="certs_cards grid_tiles">
-            <div class="cert_card">
-              <img
-                src="./assets/img/istockphoto-1482523598-612x612.jpg"
-                alt=""
-              />
+            <div class="cert_card_item">
+              <div class="cert_card">
+                <img
+                  src="./assets/img/istockphoto-1482523598-612x612.jpg"
+                  alt=""
+                />
+              </div>
+              <a href="#">Подпись сертификата</a>
             </div>
-            <div class="cert_card">Сертификат</div>
-            <div class="cert_card">Сертификат</div>
-            <div class="cert_card">Сертификат</div>
-            <div class="cert_card">Сертификат</div>
-            <div class="cert_card">Сертификат</div>
+
+            <div class="cert_card_item">
+              <div class="cert_card">Сертификат</div>
+              <a href="#">Подпись сертификата</a>
+            </div>
+            <div class="cert_card_item">
+              <div class="cert_card">Сертификат</div>
+              <a href="#">Подпись сертификата</a>
+            </div>
+
+            <div class="cert_card_item">
+              <div class="cert_card">Сертификат</div>
+              <a href="#">Подпись сертификата</a>
+            </div>
+            <div class="cert_card_item">
+              <div class="cert_card">Сертификат</div>
+              <a href="#">Подпись сертификата</a>
+            </div>
+            <div class="cert_card_item">
+              <div class="cert_card">Сертификат</div>
+              <a href="#">Подпись сертификата</a>
+            </div>
           </div>
 
           <button class="expand_button butn">
@@ -207,6 +252,34 @@
             <input placeholder="Как к вам обращаться?" type="text" />
             <input placeholder="Электронная почта" type="email" />
             <button>Подписаться</button>
+          </div>
+        </div>
+        <h1 class="title">Партнеры</h1>
+      </div>
+      <div class="about_us_swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand1.png" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand2.png" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand3.png" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand4.png" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand5.png" alt="" />
+          </div>
+
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand6.png" alt="" />
+          </div>
+
+          <div class="swiper-slide">
+            <img src="./assets/img/AboutUs/brand7.png" alt="" />
           </div>
         </div>
       </div>
