about us mobile

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -124,10 +124,9 @@
             <iframe
               width="100%"
               height="450"
-              src="./assets/video/videoTitle.mp4"
+              src="./assets/videoTitle.mp4"
               frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
             ></iframe>
           </div>
           <h1 class="about_us_title_below title">
@@ -254,35 +253,36 @@
             <button>Подписаться</button>
           </div>
         </div>
-        <h1 class="title">Партнеры</h1>
-      </div>
-      <div class="about_us_swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand1.png" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand2.png" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand3.png" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand4.png" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand5.png" alt="" />
-          </div>
+        <h1 class="title partners_title">Партнеры</h1>
+        <div class="about_us_swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand1.png" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand2.png" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand3.png" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand4.png" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand5.png" alt="" />
+            </div>
 
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand6.png" alt="" />
-          </div>
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand6.png" alt="" />
+            </div>
 
-          <div class="swiper-slide">
-            <img src="./assets/img/AboutUs/brand7.png" alt="" />
+            <div class="swiper-slide">
+              <img src="./assets/img/AboutUs/brand7.png" alt="" />
+            </div>
           </div>
         </div>
       </div>
+
       <!-- О нас контент -->
 
       <div class="footer">
