show text scripts

--- a/suppliers.html
+++ b/suppliers.html
@@ -118,9 +118,13 @@
             <div class="supp_description">
               <h6>
                 Вы поставщик или производитель?
-                <img src="./assets/suppliers-arrow.svg" alt="" />
+                <img
+                  src="./assets/suppliers-arrow.svg"
+                  alt=""
+                  class="text_show shown"
+                />
               </h6>
-              <p>
+              <p class="supple-or-creator-text">
                 Наша компания заинтересована в максимальном расширении
                 сотрудничества и всегда готова рассматривать новые предложения о
                 взаимодействии с поставщиками и производителями. Заботясь о
@@ -133,9 +137,10 @@
                 Как стать поставщиком?<img
                   src="./assets/suppliers-arrow.svg"
                   alt=""
+                  class="text_show shown"
                 />
               </h6>
-              <p>
+              <p class="how-to-become-supplier-text">
                 Чтобы стать поставщиками нашей компании, партнёрам необходимо
                 быть зарегистрированными в качестве юридического лица либо
                 индивидуального предпринимателя.
