--- a/aboutUs.html
+++ b/aboutUs.html
@@ -43,6 +43,10 @@
               <li class="info_3">О компании</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
+              <a href="#"><img src="/assets/ri_whatsapp-fill.svg" alt="" /></a>
+              <a href="#"
+                ><img src="/assets/tabler_mail-filled.svg" alt=""
+              /></a>
             </ul>
             <ul class="contacts">
               <li>8 800 700-80-89</li>
@@ -396,6 +400,13 @@
               <li>Вакансии</li>
               <li>Контакты</li>
             </ul>
+            <ul>
+              <li>Наши партнеры</li>
+              <li>Дистрибьюция</li>
+              <li>Каталог</li>
+              <li>Акции</li>
+              <li>Полезные статьи</li>
+            </ul>
             <ul class="details">
               <li>Запчасти МАЗ, КРАЗ</li>
               <li>Запчасти НЕФАЗ, ЛИАЗ</li>
@@ -411,74 +422,84 @@
               <li>Запчасти ЗИЛ</li>
               <li>Запчасти КамАЗ</li>
             </ul>
-            <ul>
-              <li>Наши партнеры</li>
-              <li>Дистрибьюция</li>
-              <li>Каталог</li>
-              <li>Акции</li>
-              <li>Полезные статьи</li>
-            </ul>
           </div>
 
           <div class="section_last">
-            <div class="section_social">
-              <ul class="social_items">
-                <li>
-                  <img
-                    src="./assets/mdi_odnoklassniki.svg"
-                    alt=""
-                  />Одноклассники
-                </li>
-                <li><img src="./assets/mdi_youtube.svg" alt="" />Канал</li>
-                <li><img src="./assets/ic_round-mail.svg" alt="" />Почта</li>
-                <li>
-                  <img src="./assets/akar-icons_vk-fill.svg" alt="" />ВКонтакте
-                </li>
-              </ul>
-            </div>
-
             <div class="social_items_mobile">
               <img src="./assets/mdi_odnoklassniki.svg" alt="" />
               <img src="./assets/mdi_youtube.svg" alt="" />
               <img src="./assets/ic_round-mail.svg" alt="" />
               <img src="./assets/akar-icons_vk-fill.svg" alt="" />
             </div>
-            <div class="footer_contacts">
-              <div class="footer_phone">
-                <h5>Телефон</h5>
-                <ul>
-                  <li>800 700-80-89</li>
-                  <li>8 8552 39-35-068</li>
-                </ul>
+            <div class="contacts_wrapper">
+              <div class="footer_contacts">
+                <div class="footer_phone">
+                  <h5>Телефон</h5>
+                  <ul>
+                    <li>800 700-80-89</li>
+                    <li>8 8552 39-35-068</li>
+                  </ul>
+                </div>
+                <div class="footer_email">
+                  <h5>Электронная Почта</h5>
+                  <ul>
+                    <li>info@mig-auto.ru</li>
+                  </ul>
+                </div>
+                <div class="footer_pay">
+                  <h5>Принимаем к оплате</h5>
+                  <ul>
+                    <li><img src="./assets/mir.svg" alt="" /></li>
+                    <li><img src="./assets/master.svg" alt="" /></li>
+                    <li><img src="./assets/visa.svg" alt="" /></li>
+                  </ul>
+                </div>
+                <div class="footer_adres">
+                  <h5>Адрес</h5>
+                  <ul>
+                    <li>
+                      423800, РФ, Татарстан г. Набережные Челны, Индустриальный
+                      проезд, д.6
+                    </li>
+                  </ul>
+                  <a class="link" href="#">Карта проезда</a>
+                </div>
               </div>
-              <div class="footer_email">
-                <h5>Электронная Почта</h5>
-                <ul>
-                  <li>info@mig-auto.ru</li>
-                </ul>
-              </div>
-              <div class="footer_pay">
-                <h5>Принимаем к оплате</h5>
-                <ul>
-                  <li><img src="./assets/mir.svg" alt="" /></li>
-                  <li><img src="./assets/master.svg" alt="" /></li>
-                  <li><img src="./assets/visa.svg" alt="" /></li>
-                </ul>
-              </div>
-              <div class="footer_adres">
-                <h5>Адрес</h5>
-                <ul>
+
+              <div class="section_social">
+                <ul class="social_items">
                   <li>
-                    423800, РФ, Татарстан г. Набережные Челны, Индустриальный
-                    проезд, д.6
+                    <img
+                      src="./assets/mdi_odnoklassniki.svg"
+                      alt=""
+                    />Одноклассники
+                  </li>
+                  <li><img src="./assets/mdi_youtube.svg" alt="" />Канал</li>
+                  <li><img src="./assets/ic_round-mail.svg" alt="" />Почта</li>
+                  <li>
+                    <img
+                      src="./assets/akar-icons_vk-fill.svg"
+                      alt=""
+                    />ВКонтакте
                   </li>
                 </ul>
-                <a class="link" href="#">Карта проезда</a>
               </div>
             </div>
+
+            <!-- <div class="section_last">
+            <ul>
+              <li>Запчасти CUMMINS</li>
+              <li>Запчасти MADARA</li>
+              <li>Запчасти для легковых автомобилей</li>
+              <li>Запчасти ЗИЛ</li>
+              <li>Запчасти КамАЗ</li>
+            </ul>
+          </div> -->
           </div>
         </div>
       </div>
+
+
       <div class="navbar_mobile">
         <div class="nav_icons_mobile">
           <div class="icon_container">
@@ -509,6 +530,84 @@
               <p>Аккаунт</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="footer_mobile">
+        <div class="footer_m_wrapper">
+          <div class="section_nav_mobile">
+            <ul>
+              <li>О компании</li>
+              <li>Гарантии и доставка</li>
+              <li>Оплата</li>
+              <li>Поставщикам</li>
+              <li>Вакансии</li>
+              <li>Контакты</li>
+            </ul>
+            <ul>
+              <li>Наши партнеры</li>
+              <li>Дистрибьюция</li>
+              <li>Каталог</li>
+              <li>Акции</li>
+              <li>Полезные статьи</li>
+            </ul>
+          </div>
+          <div class="section_products_mobile">
+            <ul>
+              <li>Запчасти МАЗ, КРАЗ</li>
+              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
+              <li>Запчасти MADARA</li>
+              <li>Запчасти для легковых автомобилей</li>
+              <li>Запчасти ЗИЛ</li>
+              <li>Запчасти Трактор</li>
+              <li>Запчасти УРАЛ</li>
+              <li>Ремни</li>
+              <li>Запчасти CUMMINS</li>
+              <li>Запчасти MADARA</li>
+              <li>Запчасти для легковых автомобилей</li>
+              <li>Запчасти ЗИЛ</li>
+              <li>Запчасти КамАЗ</li>
+            </ul>
+          </div>
+        </div>
+        <div class="social_items_mobile">
+          <img src="./assets/mdi_odnoklassniki.svg" alt="" />
+          <img src="./assets/mdi_youtube.svg" alt="" />
+          <img src="./assets/ic_round-mail.svg" alt="" />
+          <img src="./assets/akar-icons_vk-fill.svg" alt="" />
+        </div>
+        <div class="footer-m-email-phone">
+          <div class="footer_phone">
+            <h5>Телефон</h5>
+            <ul>
+              <li>800 700-80-89</li>
+              <li>8 8552 39-35-068</li>
+            </ul>
+          </div>
+          <div class="footer_email">
+            <h5>Электронная Почта</h5>
+            <ul>
+              <li>info@mig-auto.ru</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer_pay">
+          <h5>Принимаем к оплате</h5>
+          <ul>
+            <li><img src="./assets/mir.svg" alt="" /></li>
+            <li><img src="./assets/master.svg" alt="" /></li>
+            <li><img src="./assets/visa.svg" alt="" /></li>
+          </ul>
+        </div>
+        <div class="footer_adres">
+          <h5>Адрес</h5>
+          <ul>
+            <li>
+              423800, РФ, Татарстан г. Набережные Челны, Индустриальный проезд,
+              д.6
+            </li>
+          </ul>
+          <a class="link" href="#">Карта проезда</a>
         </div>
       </div>
     </div>
