Guzel fixes icons

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
               <li class="info_3">О компании</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
+              <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
+              <a href="#"
+                ><img src="./assets/ic_baseline-telegram.svg" alt=""
+              /></a>
             </ul>
             <ul class="contacts">
               <li>8 800 700-80-89</li>
