--- a/index.html
+++ b/index.html
@@ -677,12 +677,14 @@
               <li>Полезные статьи</li>
             </ul>
             <ul class="details">
-              <li>Запчасти МАЗ, КРАЗ</li>
-              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
+              <li>Запчасти ZTD</li>
+              <li>Автохимия</li>
+              <li>Запчасти CUMMINS</li>
               <li>Запчасти MADARA</li>
+              <li>Запчасти для иномарок</li>
               <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти Трактор</li>
+            </ul>
+            <ul class="details">
               <li>Запчасти УРАЛ</li>
               <li>Ремни</li>
               <li>Запчасти CUMMINS</li>
