--- a/aboutUs.html
+++ b/aboutUs.html
@@ -408,21 +408,25 @@
               <li>Полезные статьи</li>
             </ul>
             <ul class="details">
-              <li>Запчасти ZTD</li>
-              <li>Автохимия</li>
-              <li>Запчасти CUMMINS</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для иномарок</li>
-              <li>Запчасти для легковых автомобилей</li>
+              <li><a href="#">Запчасти ZTD</a></li>
+              <li><a href="#">Автохимия</a></li>
+              <li><a href="#">Запчасти CUMMINS</a></li>
+              <li><a href="#">Запчасти MADARA</a></li>
+              <li><a href="#">Запчасти для иномарок</a></li>
+              <li><a href="#">Запчасти для легковых автомобилей</a></li>
             </ul>
             <ul class="details">
-              <li>Запчасти УРАЛ</li>
-              <li>Ремни</li>
-              <li>Запчасти CUMMINS</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти КамАЗ</li>
+              <li><a href="#">Запчасти ЗИЛ</a></li>
+              <li><a href="#">Запчасти КамАЗ</a></li>
+              <li><a href="#">Запчасти МАЗ, КРАЗ</a></li>
+              <li><a href="#">Запчасти на прицеп и полуприцеп</a></li>
+              <li><a href="#">Запчасти НЕФАЗ, ЛИАЗ</a></li>
+              <li><a href="#">Запчасти Трактор</a></li>
+              <li><a href="#">Запчасти КамАЗ</a></li>
+            </ul>
+            <ul class="details">
+              <li><a href="#">Запчасти УРАЛ</a></li>
+              <li><a href="#">Ремни</a></li>
             </ul>
           </div>
 
