--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
               <button class="cart-btn">В корзину</button>
             </div>
           </div>
+          <a href="#" class="details-btn_mobile">Показать еще</a>
         </div>
         <!-- Акции и новое -->
 
@@ -662,36 +663,40 @@
         <div class="footer_wrapper">
           <div class="section">
             <ul>
-              <li>О компании</li>
-              <li>Гарантии и доставка</li>
-              <li>Оплата</li>
-              <li>Поставщикам</li>
-              <li>Вакансии</li>
-              <li>Контакты</li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Гарантии и доставка</a></li>
+              <li><a href="#">Оплата</a></li>
+              <li><a href="#">Поставщикам</a></li>
+              <li><a href="#">Вакансии</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
             <ul>
-              <li>Наши партнеры</li>
-              <li>Дистрибьюция</li>
-              <li>Каталог</li>
-              <li>Акции</li>
-              <li>Полезные статьи</li>
+              <li><a href="#">Наши партнеры</a></li>
+              <li><a href="">Дистрибьюция</a></li>
+              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Акции</a></li>
+              <li><a href="#">Полезные статьи</a></li>
             </ul>
             <ul class="details">
-              <li>Запчасти ZTD</li>
-              <li>Автохимия</li>
-              <li>Запчасти CUMMINS</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для иномарок</li>
-              <li>Запчасти для легковых автомобилей</li>
+              <li><a href="#">Запчасти ZTD</a></li>
+              <li><a href="#">Автохимия</a></li>
+              <li><a href="#">Запчасти CUMMINS</a></li>
+              <li><a href="#">Запчасти MADARA</a></li>
+              <li><a href="#">Запчасти для иномарок</a></li>
+              <li><a href="#">Запчасти для легковых автомобилей</a></li>
             </ul>
             <ul class="details">
-              <li>Запчасти УРАЛ</li>
-              <li>Ремни</li>
-              <li>Запчасти CUMMINS</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти КамАЗ</li>
+              <li><a href="#">Запчасти ЗИЛ</a></li>
+              <li><a href="#">Запчасти КамАЗ</a></li>
+              <li><a href="#">Запчасти МАЗ, КРАЗ</a></li>
+              <li><a href="#">Запчасти на прицеп и полуприцеп</a></li>
+              <li><a href="#">Запчасти НЕФАЗ, ЛИАЗ</a></li>
+              <li><a href="#">Запчасти Трактор</a></li>
+              <li><a href="#">Запчасти КамАЗ</a></li>
+            </ul>
+            <ul class="details">
+              <li><a href="#">Запчасти УРАЛ</a></li>
+              <li><a href="#">Ремни</a></li>
             </ul>
           </div>
 
