--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
             >Смотреть все<img src="./assets/img/arrow.svg" alt=""
           /></a>
           <div class="switcher" id="switcher">
-            <div class="new_products active" id="switcher_op1">
+            <div class="new_products" id="switcher_op1">
               <span>Новые поступления</span>
             </div>
-            <div class="sales" id="switcher_op2"><span>Акции</span></div>
+            <div class="sales active" id="switcher_op2"><span>Акции</span></div>
           </div>
           <div class="sales_cards">
             <div class="sales_card">
@@ -712,12 +712,12 @@
                 <div class="footer_phone">
                   <h5>Телефон</h5>
                   <ul>
-                    <li>800 700-80-89</li>
+                    <li>8 800 700-80-89</li>
                     <li>8 8552 39-35-068</li>
                   </ul>
                 </div>
                 <div class="footer_email">
-                  <h5>Электронная Почта</h5>
+                  <h5>Электронная почта</h5>
                   <ul>
                     <li>info@mig-auto.ru</li>
                   </ul>
@@ -730,16 +730,16 @@
                     <li><img src="./assets/visa.svg" alt="" /></li>
                   </ul>
                 </div>
-                <div class="footer_adres">
-                  <h5>Адрес</h5>
-                  <ul>
-                    <li>
-                      423800, РФ, Татарстан г. Набережные Челны, Индустриальный
-                      проезд, д.6
-                    </li>
-                  </ul>
-                  <a class="link" href="#">Карта проезда</a>
-                </div>
+              </div>
+              <div class="footer_adres">
+                <h5>Адрес</h5>
+                <ul>
+                  <li>
+                    423800, РФ, Татарстан г. Набережные Челны, Индустриальный
+                    проезд, д.6
+                  </li>
+                </ul>
+                <a class="link" href="#">Карта проезда</a>
               </div>
 
               <div class="section_social">
