--- a/suppliers.html
+++ b/suppliers.html
@@ -183,19 +183,19 @@
         <div class="footer_wrapper">
           <div class="section">
             <ul>
-              <li>О компании</li>
-              <li>Гарантии и доставка</li>
-              <li>Оплата</li>
-              <li>Поставщикам</li>
-              <li>Вакансии</li>
-              <li>Контакты</li>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Гарантии и доставка</a></li>
+              <li><a href="#">Оплата</a></li>
+              <li><a href="#">Поставщикам</a></li>
+              <li><a href="#">Вакансии</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
             <ul>
-              <li>Наши партнеры</li>
-              <li>Дистрибьюция</li>
-              <li>Каталог</li>
-              <li>Акции</li>
-              <li>Полезные статьи</li>
+              <li><a href="#">Наши партнеры</a></li>
+              <li><a href="">Дистрибьюция</a></li>
+              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Акции</a></li>
+              <li><a href="#">Полезные статьи</a></li>
             </ul>
             <ul class="details">
               <li><a href="#">Запчасти ZTD</a></li>
@@ -232,12 +232,12 @@
                 <div class="footer_phone">
                   <h5>Телефон</h5>
                   <ul>
-                    <li>800 700-80-89</li>
+                    <li>8 800 700-80-89</li>
                     <li>8 8552 39-35-068</li>
                   </ul>
                 </div>
                 <div class="footer_email">
-                  <h5>Электронная Почта</h5>
+                  <h5>Электронная почта</h5>
                   <ul>
                     <li>info@mig-auto.ru</li>
                   </ul>
@@ -250,16 +250,16 @@
                     <li><img src="./assets/visa.svg" alt="" /></li>
                   </ul>
                 </div>
-                <div class="footer_adres">
-                  <h5>Адрес</h5>
-                  <ul>
-                    <li>
-                      423800, РФ, Татарстан г. Набережные Челны, Индустриальный
-                      проезд, д.6
-                    </li>
-                  </ul>
-                  <a class="link" href="#">Карта проезда</a>
-                </div>
+              </div>
+              <div class="footer_adres">
+                <h5>Адрес</h5>
+                <ul>
+                  <li>
+                    423800, РФ, Татарстан г. Набережные Челны, Индустриальный
+                    проезд, д.6
+                  </li>
+                </ul>
+                <a class="link" href="#">Карта проезда</a>
               </div>
 
               <div class="section_social">
