--- a/contacts.html
+++ b/contacts.html
@@ -153,12 +153,13 @@
         </div>
 
         <div class="people">
-          <h3>Наши консультанты</h3>
+          <h3>Наши эксперты</h3>
           <div class="people_cards">
             <div class="people_card">
               <img src="./assets/p1.png" alt="" />
-              <h5>Сергей Сухорученко</h5>
+
               <ul>
+                <h5>Сергей Сухорученко</h5>
                 <li>
                   <img
                     src="./assets/tabler_mail-filled.svg"
@@ -176,8 +177,9 @@
             </div>
             <div class="people_card">
               <img src="./assets/p2.png" alt="" />
-              <h5>Сергей Сухорученко</h5>
+
               <ul>
+                <h5>Сергей Сухорученко</h5>
                 <li>
                   <img
                     src="./assets/tabler_mail-filled.svg"
@@ -195,8 +197,9 @@
             </div>
             <div class="people_card">
               <img src="./assets/p3.png" alt="" />
-              <h5>Сергей Сухорученко</h5>
+
               <ul>
+                <h5>Сергей Сухорученко</h5>
                 <li>
                   <img
                     src="./assets/tabler_mail-filled.svg"
@@ -214,8 +217,9 @@
             </div>
             <div class="people_card">
               <img src="./assets/p4.png" alt="" />
-              <h5>Сергей Сухорученко</h5>
+
               <ul>
+                <h5>Сергей Сухорученко</h5>
                 <li>
                   <img
                     src="./assets/tabler_mail-filled.svg"
