--- a/index.html
+++ b/index.html
@@ -626,8 +626,8 @@
                 <div class="footer_phone">
                   <h5>Телефон</h5>
                   <ul>
-                    <li>8 800 700-80-89</li>
-                    <li>8 8552 39-35-068</li>
+                    <li>+7 800 700-80-89</li>
+                    <li>+7 8552 39-35-06</li>
                   </ul>
                 </div>
                 <div class="footer_email">
@@ -769,8 +769,8 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>800 700-80-89</li>
-              <li>8 8552 39-35-068</li>
+              <li>+700 700-80-89</li>
+              <li>+7 8552 39-35-06</li>
             </ul>
           </div>
           <div class="footer_email">
@@ -798,6 +798,20 @@
             </li>
           </ul>
           <a class="link" href="#">Карта проезда</a>
+        </div>
+      </div>
+
+      <div class="IDEA">
+        <div class="IDEA_content">
+          <div>
+            <a>Создание и продвижение сайтов - ИДЕЯ!</a>
+            <a>© «МИГ-АВТО»</a>
+          </div>
+
+          <div class="politics">
+            <a href="#">Пользовательское соглашение</a>
+            <a href="#">Политика конфиденциальности</a>
+          </div>
         </div>
       </div>
     </div>
