--- a/aboutUs.html
+++ b/aboutUs.html
@@ -442,8 +442,8 @@
                 <div class="footer_phone">
                   <h5>Телефон</h5>
                   <ul>
-                    <li>8 800 700-80-89</li>
-                    <li>8 8552 39-35-068</li>
+                    <li>+7 800 700-80-89</li>
+                    <li>+7 8552 39-35-06</li>
                   </ul>
                 </div>
                 <div class="footer_email">
@@ -505,7 +505,6 @@
         </div>
       </div>
 
-
       <div class="navbar_mobile">
         <div class="nav_icons_mobile">
           <div class="icon_container">
@@ -538,6 +537,7 @@
           </div>
         </div>
       </div>
+
       <div class="footer_mobile">
         <div class="footer_m_wrapper">
           <div class="section_nav_mobile">
@@ -585,8 +585,8 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>800 700-80-89</li>
-              <li>8 8552 39-35-068</li>
+              <li>+700 700-80-89</li>
+              <li>+7 8552 39-35-06</li>
             </ul>
           </div>
           <div class="footer_email">
@@ -614,6 +614,20 @@
             </li>
           </ul>
           <a class="link" href="#">Карта проезда</a>
+        </div>
+      </div>
+
+      <div class="IDEA">
+        <div class="IDEA_content">
+          <div>
+            <a>Создание и продвижение сайтов - ИДЕЯ!</a>
+            <a>© «МИГ-АВТО»</a>
+          </div>
+
+          <div class="politics">
+            <a href="#">Пользовательское соглашение</a>
+            <a href="#">Политика конфиденциальности</a>
+          </div>
         </div>
       </div>
     </div>
