--- a/contacts.html
+++ b/contacts.html
@@ -21,6 +21,7 @@
               <li class="info_3">Покупателям</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
+
               <button class="download_btn">
                 <a href="#">Скачать прайс</a>
               </button>
@@ -44,6 +45,10 @@
               <li class="info_3">Покупателям</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
+              <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
+              <a href="#"
+                ><img src="./assets/ic_baseline-telegram.svg" alt=""
+              /></a>
             </ul>
             <ul class="contacts">
               <li>8 800 700-80-89</li>
@@ -298,8 +303,8 @@
                 <div class="footer_phone">
                   <h5>Телефон</h5>
                   <ul>
-                    <li>8 800 700-80-89</li>
-                    <li>8 8552 39-35-068</li>
+                    <li>+7 800 700-80-89</li>
+                    <li>+7 8552 39-35-06</li>
                   </ul>
                 </div>
                 <div class="footer_email">
@@ -441,8 +446,8 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>800 700-80-89</li>
-              <li>8 8552 39-35-068</li>
+              <li>+700 700-80-89</li>
+              <li>+7 8552 39-35-06</li>
             </ul>
           </div>
           <div class="footer_email">
@@ -470,6 +475,20 @@
             </li>
           </ul>
           <a class="link" href="#">Карта проезда</a>
+        </div>
+      </div>
+
+      <div class="IDEA">
+        <div class="IDEA_content">
+          <div>
+            <a>Создание и продвижение сайтов - ИДЕЯ!</a>
+            <a>© «МИГ-АВТО»</a>
+          </div>
+
+          <div class="politics">
+            <a href="#">Пользовательское соглашение</a>
+            <a href="#">Политика конфиденциальности</a>
+          </div>
         </div>
       </div>
     </div>
