--- a/suppliers.html
+++ b/suppliers.html
@@ -25,8 +25,8 @@
               </button>
             </ul>
             <ul class="contacts">
-              <li>8 800 700-80-89</li>
-              <li class="contacts_2">8 8552 39-35-06</li>
+              <li>+7 800 700-80-89</li>
+              <li class="contacts_2">+7 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
