--- a/contacts.html
+++ b/contacts.html
@@ -27,8 +27,8 @@
               </button>
             </ul>
             <ul class="contacts">
-              <li>8 800 700-80-89</li>
-              <li class="contacts_2">8 8552 39-35-06</li>
+              <li>+7 800 700-80-89</li>
+              <li class="contacts_2">+7 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
@@ -51,8 +51,8 @@
               /></a>
             </ul>
             <ul class="contacts">
-              <li>8 800 700-80-89</li>
-              <li class="contacts_2">8 8552 39-35-06</li>
+              <li>+7 800 700-80-89</li>
+              <li class="contacts_2">+7 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
